# zjut-smallpt

./: README.md  generate_video.py
cpp-smallpt/: CMakeLists.txt
cpp-smallpt/src/: cpp-smallpt.cpp  imageio.hpp
cu-mpi-smallpt/: CMakeLists.txt
cu-mpi-smallpt/src/: geometry.cuh  kernel.cu
cu-openmp-smallpt/: CMakeLists.txt
cu-openmp-smallpt/src/: kernel.cu
cu-smallpt/: CMakeLists.txt
cu-smallpt-abla/src/: kernel.cu  vector.hpp
cu-smallpt/src/: cuda_tools.hpp  imageio.hpp  kernel.cu  math.hpp  sampling.cuh  specular.cuh  sphere.hpp
cu-smallpt_diff_block/src/: kernel.cu
cu-smallpt_video/src/: imageio.hpp  kernel.cu
openmp-cpp-smallpt/: CMakeLists.txt
openmp-cpp-smallpt/src/: cpp-smallpt.cpp  imageio.hpp
